# Guerra-de-pijas

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  clientServer  config.yaml  defaultWeapons.yaml  featureList.todo  run.sh  serverConfig.yaml  temasDiscutidos.html  temasDiscutidos.md  valgrind.supp
client/: ClientSocket.cpp  ClientSocket.h  main.cpp
common/: Exception.cpp  Exception.h  Socket.h
libs/: Animation.cpp  Animation.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Chronometer.cpp  Chronometer.h  CommunicationSocket.cpp  CommunicationSocket.h  Direction.h  DoubleBuffer.h  ErrorMessages.h  Exception.cpp  Exception.h  Font.h  GameStateMsg.h  IO.h  Observer.h  Point.h  Protocol.cpp  Protocol.h  Socket.cpp  Socket.h  SoundEffect.cpp  SoundEffect.h  SoundEffectManager.h  Stage.cpp  Stage.h  Stream.h  Subject.cpp  Subject.h  Text.cpp  Text.h  Texture.h  Thread.cpp  Thread.h  Window.cpp  Window.h  WrapTexture.cpp  (+2 more)
libs/Box2D/Collision/: b2Collision.cpp  b2Distance.cpp
libs/Box2D/Common/: b2Math.h
libs/yaml-cpp/: CMakeLists.txt
libs/yaml-cpp/src/: emitterutils.cpp
libs/yaml-cpp/test/: ostream_wrapper_test.cpp  regex_test.cpp
report/Project Manual/: hard.tex  inconvenientes.tex  informacionAlumnos.tex  main.aux  main.tex  main.toc
report/Technical documentation/: cliente.tex  comandosUtiles.tex  descripcion_general.tex  editor.tex  gameCommunication.tex  informacionAlumnos.tex  main.aux  main.tex  main.toc  servidor.tex  soft.tex
report/Technical documentation/umlScripts/: Socket  WeaponsServer  createGame.wsd  joinGame.wsd  wormsState
report/User Manual/: caratula.tex  config.tex  informacionAlumnos.tex  install.tex  intro.tex  main.tex  soft.tex  uso.tex
res/: bg0.xcf  bg1.xcf  test.yml  test2.yml  test3.yml
res/level1/:  level1.yml  level1.yml  test.yml
res/level1/Background/: bg2.xcf
res/level2/: level2.yml
server/: ServerSocket.cpp  ServerSocket.h  main.cpp
src/SDLTest/: Texture.cpp  Texture.h  View.cpp  View.h  buttonMain.cpp  main.cpp  soundMain.cpp
src/box2DTest/: test.cpp
src/client/: AerialAttack.cpp  AerialAttack.h  Armory.cpp  Armory.h  BackgroundMusic.cpp  BackgroundMusic.h  BackgroundMusicManager.h  BackgroundMusicPlayer.cpp  BackgroundMusicPlayer.h  Banana.cpp  Banana.h  BaseballBat.cpp  BaseballBat.h  Bazooka.cpp  Bazooka.h  Bullet.cpp  Bullet.h  Button.cpp  Button.h  ClientSocket.cpp  ClientSocket.h  Cluster.cpp  Cluster.h  CommunicationProtocol.cpp  CommunicationProtocol.h  ConnectionWindow.cpp  ConnectionWindow.h  CreateGameWindow.cpp  CreateGameWindow.h  Dead.cpp  Dead.h  Die.cpp  Die.h  Direction.h  Drowning.cpp  Drowning.h  Dynamite.cpp  Dynamite.h  Falling.cpp  Falling.h  (+65 more)
src/client/Lobby/: JoinGameWindow.cpp  JoinGameWindow.h
src/client/Weapons/: AerialAttack.h  BaseballBat.cpp  Bazooka.cpp  Bullet.cpp  Bullet.h  Cluster.cpp  Explosion.cpp  Explosion.h  Grenade.h  Holy.h  Mortar.h  PowerBar.h  Scope.h  Weapon.cpp  Weapon.h
src/client/WormState/: BackFlip.cpp  BackFlip.h  Batting.cpp  Batting.h  Dead.cpp  Dead.h  Die.h  Drowning.cpp  Drowning.h  Sliding.cpp  Teleporting.h  WormBackFlipping.cpp  WormBackFlipping.h  WormEndBackFlip.cpp  WormEndBackFlip.h  WormEndJump.cpp  WormEndJump.h  WormJumping.cpp  WormJumping.h  WormStartJump.h  WormStill.h  WormWalk.cpp  WormWalk.h
src/clientServer/: Animation.cpp  Animation.h  Camera.cpp  Camera.h  Color.h  ContactEventListener.cpp  DoubleBuffer.h  GUIGame.cpp  GUIGame.h  Game.cpp  Game.h  GameStateMsg.h  GameTextures.h  Physics.cpp  Physics.h  Player.cpp  Player.h  PlayerBackFlipping.cpp  PlayerBackFlipping.h  PlayerBazooka.cpp  PlayerBazooka.h  PlayerEndBackFlip.cpp  PlayerEndBackFlip.h  PlayerEndJump.cpp  PlayerEndJump.h  PlayerJump.cpp  PlayerJump.h  PlayerJumpLeft.cpp  PlayerJumpLeft.h  PlayerJumpRight.cpp  PlayerJumpRight.h  PlayerJumping.cpp  PlayerJumping.h  PlayerStartBackFlip.cpp  PlayerStartBackFlip.h  PlayerStartJump.cpp  PlayerStartJump.h  PlayerState.cpp  PlayerState.h  PlayerStill.cpp  (+52 more)
src/clientServer/client/: Animation.cpp  Animation.h  Armory.cpp  Armory.h  Banana.cpp  Banana.h  Bazooka.cpp  Bazooka.h  Bullet.cpp  Bullet.h  Camera.cpp  Camera.h  Cluster.cpp  Cluster.h  Dead.cpp  Dead.h  Die.cpp  Die.h  Direction.h  Drown.cpp  Drown.h  Drowned.cpp  Drowned.h  Drowning.cpp  Drowning.h  Explosion.cpp  Explosion.h  Falling.cpp  Falling.h  Font.cpp  GUIGame.cpp  GUIGame.h  GameSoundEffects.h  GameTextures.h  Grenade.cpp  Grenade.h  Hit.cpp  Hit.h  Holy.cpp  Holy.h  (+47 more)
src/clientServer/server/: Banana.cpp  Banana.h  Bazooka.cpp  Bazooka.h  Bullet.cpp  Bullet.h  Cluster.cpp  Cluster.h  Config.cpp  Config.h  ContactEventListener.cpp  ContactEventListener.h  Dead.cpp  Dead.h  Die.cpp  Die.h  Drown.cpp  Drown.h  Drowned.cpp  Drowned.h  Drowning.cpp  Drowning.h  Entity.cpp  Entity.h  Falling.cpp  Falling.h  Game.cpp  Game.h  GameClock.cpp  GameClock.h  GameConstants.h  GameTeams.cpp  GameTeams.h  GameTurn.cpp  GameTurn.h  GameTurnState.cpp  GameTurnState.h  Grenade.cpp  Grenade.h  Hit.cpp  (+52 more)
src/editor/Editor/: Editor.pro  editor.cpp  editor.h  editorscene.cpp  editorscene.h  editorview.cpp  editorview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qgraphicsitemlayer.cpp  (+12 more)
src/prototype/: ClientSocket.cpp  Game.h  Physics.h  Player.h  Point.h  World.h  gui.h  main.cpp  stream.h
src/server/: AerialAttack.cpp  AerialAttack.h  Banana.cpp  Banana.h  BaseballBat.cpp  BaseballBat.h  Bazooka.cpp  Bazooka.h  Bullet.cpp  Bullet.h  Cluster.cpp  Cluster.h  Config.cpp  Config.h  ContactEventListener.cpp  ContactEventListener.h  Dead.cpp  Dead.h  Die.cpp  Die.h  Drowning.cpp  Drowning.h  Dynamite.cpp  Dynamite.h  Falling.cpp  Falling.h  Game.cpp  Game.h  GameClock.cpp  GameClock.h  GameConstants.h  GameLobby.cpp  GameLobby.h  GameLobbyAssistant.cpp  GameLobbyAssistant.h  GameTeams.cpp  GameTeams.h  GameTurn.cpp  GameTurn.h  GameTurnState.cpp  (+71 more)
(+96 files in other folders)
